Fixed an issue with the transition z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -134,7 +134,7 @@ footer > img {
 	bottom: 0;
 	right: 0;
 	left: 0;
-	z-index: 100;
+	z-index: 1000;
 
 	transition: transform 500ms;
 }
